# Capture_and_display_V4L2_app

./: CMakeLists.txt  README.md  main.cpp  v4l2Device.cpp  v4l2Device.h  v4l_capture.cpp
