cmake_minimum_required(VERSION 2.8)
project(Capture_and_display_V4L2_app)
set(OpenCV /usr/lib/opencv)
find_package(PkgConfig REQUIRED)
find_package(OpenCV REQUIRED)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)
add_executable(${PROJECT_NAME} v4l_capture.cpp)
target_link_libraries(${PROJECT_NAME} pthread)
target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS})
